--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %title Do
     = stylesheet_link_tag "application"
-    = javascript_include_tag "application"
+    = javascript_include_tag "/javascripts/application"
     = csrf_meta_tags
 
   %body
@@ -12,4 +12,3 @@
       %p.alert= alert
 
     = yield
-
