--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -6,15 +6,15 @@
           .author
             &nbsp;
           .header
-            %h1= link_to article.title, article
-            - article.tags.each do |t|
-              %span= t.name
+            %h1{'data-editable' => article_path(article)}= article.title
+            %span.meta.tags{'data-editable' => article_path(article)}
+              = article.tag_list
           .act
             = link_to 'Show', article
             = link_to 'Edit', edit_article_path(article)
             = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
 
-    = link_to 'New Article', new_article_path
+    = link_to 'New Article', new_article_path, :class => :new
 
   .navigation
 
