--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -8,7 +8,7 @@
           .header
             %h1{'data-editable' => article_path(article)}= article.title
             %span.meta.tags{'data-editable' => article_path(article)}
-              = article.tag_list
+              = article.tag_collection
           .act
             = link_to 'Show', article
             = link_to 'Edit', edit_article_path(article)
